tests/fail/fail_return_value_in_void.kl
// ERROR: returning a value from a void function.
fn inisiu() {
    divolvi 5;
}
